force-app/zurich-base/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <description>OCS</description>
    <label>Siniestro</label>
    <nameField>
        <label>Claim Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Siniestros</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>