force-app/zurich-base/main/default/objects/Claim__c/fields/AssetIdentifier__c.field-meta.xml
<CustomField>
    <fullName>AssetIdentifier__c</fullName>
    <formula>InsuredObject__r.Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Identifier</label>
    <type>Text</type>
</CustomField>