force-app/zurich-base/main/default/objects/Claim__c/fields/AssistanceCode__c.field-meta.xml
<CustomField>
    <fullName>AssistanceCode__c</fullName>
    <description>The code of the assistance claim.</description>
    <label>Assistance Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>