force-app/zurich-base/main/default/objects/Claim__c/fields/AssistanceCompany__c.field-meta.xml
<CustomField>
    <fullName>AssistanceCompany__c</fullName>
    <description>The name of the assistance company associated with the claim.</description>
    <label>Assistance Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>