force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimDate__c.field-meta.xml
<CustomField>
    <fullName>ClaimDate__c</fullName>
    <description>Fecha en la que se presenta una reclamación formal relacionada con el siniestro.</description>
    <inlineHelpText>Fecha en la que se registra la reclamación oficial del siniestro.</inlineHelpText>
    <label>Claim Date</label>
    <type>Date</type>
</CustomField>