force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimNotificationDate__c.field-meta.xml
<CustomField>
    <fullName>ClaimNotificationDate__c</fullName>
    <description>Fecha en la que se notifica el siniestro a la aseguradora.</description>
    <inlineHelpText>Fecha en la que se recibió la notificación del siniestro.</inlineHelpText>
    <label>Notification Date</label>
    <type>Date</type>
</CustomField>