force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimOwnerFirstname__c.field-meta.xml
<CustomField>
    <fullName>ClaimOwnerFirstname__c</fullName>
    <description>(OCS/ZE). Primer apellido del Tramitador del Siniestro Siniestro</description>
    <label>Owner Firstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>