force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimOwnerLastname__c.field-meta.xml
<CustomField>
    <fullName>ClaimOwnerLastname__c</fullName>
    <description>(OCS/ZE). Segundo apeliido del Tramitador del Siniestro</description>
    <label>Owner Lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>