force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimOwnerName__c.field-meta.xml
<CustomField>
    <fullName>ClaimOwnerName__c</fullName>
    <description>(OCS/ZE). Nombre del Tramitador del Siniestro</description>
    <label>Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>