force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimOwnerNationalId__c.field-meta.xml
<CustomField>
    <fullName>ClaimOwnerNationalId__c</fullName>
    <description>(OCS/ZE). Documento de identidad del Tramitador Siniestro</description>
    <externalId>true</externalId>
    <label>Owner National Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>