force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimOwnerTeamCode__c.field-meta.xml
<CustomField>
    <fullName>ClaimOwnerTeamCode__c</fullName>
    <description>(OCS/ZE). Código equipo Tramitador del Siniestro</description>
    <externalId>true</externalId>
    <label>Owner Team Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>