force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimOwnerTeamName__c.field-meta.xml
<CustomField>
    <fullName>ClaimOwnerTeamName__c</fullName>
    <description>(OCS/ZE). Nombre equipo Tramitador del Siniestro</description>
    <label>Owner Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>