force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimReinstatementDate__c.field-meta.xml
<CustomField>
    <fullName>ClaimReinstatementDate__c</fullName>
    <description>Fecha en la que se reactiva el siniestro después de haber sido cerrado o inactivo.</description>
    <inlineHelpText>Fecha en la que se rehabilita el siniestro para su seguimiento.</inlineHelpText>
    <label>Reinstatement Date</label>
    <type>Date</type>
</CustomField>