force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimResponsible__c.field-meta.xml
<CustomField>
    <fullName>ClaimResponsible__c</fullName>
    <description>(OCS). Campo que identifica quien es el responsable del siniestro</description>
    <label>Claim responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>