force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimType__c.field-meta.xml
<CustomField>
    <fullName>ClaimType__c</fullName>
    <description>(OCS). Tipo de siniestro afectado (desplegable por sector) no tipología de cobertura</description>
    <label>Claim type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>valores</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>definidos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>