force-app/zurich-base/main/default/objects/Claim__c/fields/ClaimTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>ClaimTypeDescription__c</fullName>
    <description>External request etiqueta &quot;siniestro_motivo_desc&quot;</description>
    <label>Claim Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>