force-app/zurich-base/main/default/objects/Claim__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>Fecha de cierre</label>
    <type>Date</type>
</CustomField>