force-app/zurich-base/main/default/objects/Claim__c/fields/DateOfOccurrence__c.field-meta.xml
<CustomField>
    <fullName>DateOfOccurrence__c</fullName>
    <description>(OCS). Fecha del momento del suceso</description>
    <label>Date of occurrence</label>
    <type>Date</type>
</CustomField>