force-app/zurich-base/main/default/objects/Claim__c/fields/FaultFactor__c.field-meta.xml
<CustomField>
    <fullName>FaultFactor__c</fullName>
    <description>(OCS). Indica si el culpable del siniestro es el asegurado o el contrario.</description>
    <label>Fault Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>