force-app/zurich-base/main/default/objects/Claim__c/fields/GroupDescription__c.field-meta.xml
<CustomField>
    <fullName>GroupDescription__c</fullName>
    <description>OCS. Muestra el ramo del producto de la póliza asociada al siniestro</description>
    <formula>Policy__r.ProductId__r.GroupDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Description</label>
    <type>Text</type>
</CustomField>