force-app/zurich-base/main/default/objects/Claim__c/fields/INFOClaimLink__c.field-meta.xml
<CustomField>
    <fullName>INFOClaimLink__c</fullName>
    <description>(OCS). Vinculo a INFO para poder abrirlo desde CRM y saltar al ”siniestro” del cliente</description>
    <label>INFO Claim Link</label>
    <type>Url</type>
</CustomField>