force-app/zurich-base/main/default/objects/Claim__c/fields/INFOClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>INFOClaimNumber__c</fullName>
    <description>OCS</description>
    <externalId>true</externalId>
    <label>INFO Claim Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>