force-app/zurich-base/main/default/objects/Claim__c/fields/InsuredObject__c.field-meta.xml
<CustomField>
    <fullName>InsuredObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS). Puntero al riesgo asegurado de la póliza</description>
    <label>Insured object</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>