force-app/zurich-base/main/default/objects/Claim__c/fields/IsParentAnonymized__c.field-meta.xml
<CustomField>
    <fullName>IsParentAnonymized__c</fullName>
    <formula>PolicyHolder__r.Anonymized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsParentAnonymized</label>
    <type>Checkbox</type>
</CustomField>