force-app/zurich-base/main/default/objects/Claim__c/fields/OpenDate__c.field-meta.xml
<CustomField>
    <fullName>OpenDate__c</fullName>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>