force-app/zurich-base/main/default/objects/Claim__c/fields/PolicyHolder__c.field-meta.xml
<CustomField>
    <fullName>PolicyHolder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS). Puntero al tomador de la póliza vinculada</description>
    <label>Policy holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>