force-app/zurich-base/main/default/objects/Claim__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS). Puntero al nombre del producto de la póliza (obsoleto)</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>