force-app/zurich-base/main/default/objects/Claim__c/fields/ProductBranch__c.field-meta.xml
<CustomField>
    <fullName>ProductBranch__c</fullName>
    <description>Obtiene el ramo de la poliza asociada</description>
    <formula>Policy__r.ProductBranch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ramo de la póliza asociada</inlineHelpText>
    <label>Product Branch</label>
    <type>Text</type>
</CustomField>