force-app/zurich-base/main/default/objects/Claim__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>OCS. Muestra el nombre del producto vinculado a la póliza que está asociada al siniestro</description>
    <formula>Policy__r.ProductId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>