force-app/zurich-base/main/default/objects/Claim__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>OCS</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Pte de aprobación</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Rehabilitado</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Terminado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>