force-app/zurich-base/main/default/objects/Claim__c/listViews/ZDA_Todos_los_siniestros.listView-meta.xml
<ListView>
    <fullName>ZDA_Todos_los_siniestros</fullName>
    <columns>NAME</columns>
    <columns>Policy__c</columns>
    <columns>Product__c</columns>
    <columns>PolicyHolder__c</columns>
    <filterScope>Everything</filterScope>
    <label>ZDA - Todos los siniestros</label>
    <sharedTo>
        <role>ZDA_Agente</role>
        <role>ZDA_Supervisor</role>
    </sharedTo>
</ListView>